--- a/megoldasok.tex
+++ b/megoldasok.tex
@@ -307,3 +307,11 @@ között(A, B, X) :-
 ha X > Y akkor Z := V egyébként _ :- X > Y, Z = V. 
 ha X > Y akkor _ egyébként Z := V :- X =< Y, Z = V. 
 \end{program}
+\subsubsection*{36.~feladat}
+\begin{query}
+
+\end{query}
+\subsubsection*{37.~feladat}
+\begin{program}
+
+\end{program}
