Added octopus game example

--- a/konyv.tex
+++ b/konyv.tex
@@ -24,6 +24,7 @@
 \usepackage{tcolorbox}
 \usepackage{tikz}
 \usetikzlibrary{trees}
+\usepackage{wrapfig}
 
 % Layout for debugging
 %\usepackage{showframe}
