--- a/megoldasok.tex
+++ b/megoldasok.tex
@@ -521,3 +521,23 @@ számol_és_töröl(X, [Y|Yk], N, [Y|Zk]) :-
 \begin{program}
 bagof(C, részhalmaz(X, C), L).
 \end{program}
+\subsubsection*{46.~feladat}
+\begin{program}
+
+\end{program}
+\subsubsection*{47.~feladat}
+\begin{program}
+
+\end{program}
+\subsubsection*{48.~feladat}
+\begin{program}
+
+\end{program}
+\subsubsection*{49.~feladat}
+\begin{program}
+
+\end{program}
+\subsubsection*{50.~feladat}
+\begin{program}
+
+\end{program}
